<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_green"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <!-- Add your Views -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewDialogClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:layout_gravity="right"
            android:src="@drawable/ic_close_white"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageViewCover"
            android:layout_width="@dimen/dimen_130dp"
            android:layout_height="@dimen/dimen_130dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_heart"
            android:layout_marginTop="@dimen/dimen_12dp"
            android:layout_marginBottom="@dimen/dimen_12dp"/>

        <TextView
            android:id="@+id/heroName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimen_24dp"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/ubuntu_bold"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/biographyOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_biography" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/biography"
                android:textSize="20sp"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutExpand"
            android:visibility="gone"
            android:background="#f7f7f7"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="test"
                android:fontFamily="@font/ubuntu_regular"/>

            <TextView
                android:id="@+id/alterEgos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="test"
                android:fontFamily="@font/ubuntu_regular"/>

            <TextView
                android:id="@+id/placeOfBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="test"
                android:fontFamily="@font/ubuntu_regular"/>

            <TextView
                android:id="@+id/firstAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="test"
                android:fontFamily="@font/ubuntu_regular"/>

            <TextView
                android:id="@+id/publisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="test"
                android:fontFamily="@font/ubuntu_regular"/>

            <TextView
                android:id="@+id/alignment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="test"
                android:fontFamily="@font/ubuntu_regular"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/appearanceOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_appearance" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/appearance"
                android:textSize="20sp"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutExpandApperance"
            android:visibility="gone"
            android:background="#f7f7f7"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="test"
                android:fontFamily="@font/ubuntu_regular"/>

            <TextView
                android:id="@+id/race"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="test"
                android:fontFamily="@font/ubuntu_regular"/>

            <TextView
                android:id="@+id/height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="test"
                android:fontFamily="@font/ubuntu_regular"/>

            <TextView
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="test"
                android:fontFamily="@font/ubuntu_regular"/>

            <TextView
                android:id="@+id/eyeColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="test"
                android:fontFamily="@font/ubuntu_regular"/>

            <TextView
                android:id="@+id/hairColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="test"
                android:fontFamily="@font/ubuntu_regular"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray" />


        <LinearLayout
            android:id="@+id/powersOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_powers" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/power_stats"
                android:textSize="20sp"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutExpandPowers"
            android:visibility="gone"
            android:background="#f7f7f7"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/intelligence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="test"
                android:fontFamily="@font/ubuntu_regular"/>

            <TextView
                android:id="@+id/strength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="test"
                android:fontFamily="@font/ubuntu_regular"/>

            <TextView
                android:id="@+id/speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="test"
                android:fontFamily="@font/ubuntu_regular"/>

            <TextView
                android:id="@+id/durability"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="test"
                android:fontFamily="@font/ubuntu_regular"/>

            <TextView
                android:id="@+id/power"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="test"
                android:fontFamily="@font/ubuntu_regular"/>

            <TextView
                android:id="@+id/combat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="test"
                android:fontFamily="@font/ubuntu_regular"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/connectionsOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_people" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/connections"
                android:textSize="20sp"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutExpandConnect"
            android:visibility="gone"
            android:background="#f7f7f7"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/groupAffiliation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="test"
                android:fontFamily="@font/ubuntu_regular"/>

            <TextView
                android:id="@+id/relatives"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="test"
                android:fontFamily="@font/ubuntu_regular"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/workOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_work" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/work"
                android:textSize="20sp"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutExpandWork"
            android:visibility="gone"
            android:background="#f7f7f7"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/occupation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="test"
                android:fontFamily="@font/ubuntu_regular"/>

            <TextView
                android:id="@+id/base"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="test"
                android:fontFamily="@font/ubuntu_regular"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>